# menu-judge

./: .autoresearch_guard.sh  .autoresearch_results.tsv  .autoresearch_verify.sh  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tailwind.config.js
.claude/: hooks.json  settings.json
.claude/agents/: code-reviewer.md  planner.md  security-reviewer.md  tdd-guide.md
.claude/command/: impliment-issue-worktree-subagent.md
.claude/commands/: build-fix.md  code-review.md  create-issue.md  merge-issue.md  plan.md  remove-worktree.md  security-check.md  see-issue.md  tdd.md
.claude/hooks/: pre_commit_ruff.sh
.claude/rules/: agents.md  coding-style.md  git-workflow.md  llm-behavior.md  security.md  testing.md
app/: __init__.py
app/models/: __init__.py  dish.py
app/routes/: __init__.py  dev.py  menu.py
app/templates/: base.html  index.html
app/translations/: __init__.py  en.json  ja.json  loader.py
tests/: conftest.py  test_ai_base_abstract.py  test_app_factory.py  test_app_factory_lang.py  test_app_factory_mkdir.py  test_claude_prompt_fallback.py  test_dev_routes.py  test_dish.py  test_dish_card.py  test_dish_filter.py  test_error_partial.py  test_integration.py  test_menu_routes.py  test_menu_routes_edge.py  test_models.py  test_models_edge.py  test_openai_provider.py  test_response_parser.py  test_routes.py  test_services.py  test_services_ai.py  test_templates.py  test_translations.py  test_translations_missing_file.py
(+21 files in other folders)
