[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-judge"
version = "0.1.0"
description = "Web application for analyzing restaurant menu images"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "instance*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pre-commit>=3.0.0,<5.0.0",
]

[tool.ruff]
# 行の長さ制限
line-length = 100
target-version = "py313"

# チェック対象ディレクトリ
include = ["app/**/*.py", "tests/**/*.py", "run.py"]

[tool.ruff.lint]
# 有効化するルールセット
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import順序)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

# 無視するルール
ignore = [
    "E501",  # 行の長さは line-length で管理
]

[tool.ruff.format]
# フォーマット設定
quote-style = "double"
indent-style = "space"

[tool.bandit]
# セキュリティチェック設定
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # assert_used（テストでは使用するため）
]
